frontend/test/should_fail/mismatch_of_match_type.grg
test foo
{
	def var i:int;
}

test bar
{
	def var i:int;
}

filter filterRemoveNonMatching<foo>(var i:int)
{
	for(m:match<bar> in this)
	{
		if(m.i != i) {
			m = null; 
		}
	}
}

